[MODGOBI-193]. Add 'Suppress from discovery' configuration for instance (#262)
* [MODGOBI-193]. Add 'Suppress from discovery' configuration for instance

* [MODGOBI-193]. Update tests

* [MODGOBI-193]. Remove dep reduced pom

* [MODGOBI-193]. Update acq-models

* [MODGOBI-193]. Fix acq-models